chore: update project build and configuration setup
- Remove `.idea/modules.xml` and update `.idea` project settings
- Upgrade Java version to 25 and update related Gradle dependencies
- Switch to `com.gradleup.shadow` plugin (v9.3.1) and adjust build script
- Update library versions for Jackson, Weld, Lombok, MapStruct, AssertJ, and JUnit
- Modify application JVM arguments and bytecode target level
- Adjust annotation processor paths in `.idea/compiler.xml`